--- a/trade-menu.html
+++ b/trade-menu.html
@@ -299,7 +299,7 @@
             <!-- 5. Quotes Page (Market Watch) -->
             <div id="quotesPage" class="page-container p-3 md:p-6 hidden">
                 <div class="max-w-4xl mx-auto space-y-4">
-                    <h2 class="text-2xl font-bold text-mt5-accent mb-4">Quotes (Market Watch)</h2>
+                    <h2 class="text-2xl font-bold text-mt5-accent mb-4">Quotes</h2>
                     <div id="quotesList" class="space-y-2">
                         <p class="text-gray-500 text-center py-4">Loading market symbols...</p>
                     </div>
@@ -312,7 +312,7 @@
     <div class="bg-gray-900 p-2 md:p-3 flex items-center justify-between border-b border-gray-800 shadow-lg z-10">
         <div class="flex items-center space-x-3 md:space-x-4">
             <h2 id="chartTitle" class="text-white text-lg md:text-xl font-bold truncate max-w-xs md:max-w-lg">
-                <span class="text-cyan-400">TradingView Chart</span> • 
+                <span class="text-cyan-400">Chart</span> • 
                 <span id="currentChartSymbol" class="text-yellow-400">Loading...</span>
             </h2>
             <div class="hidden md:flex items-center space-x-2">
@@ -1190,7 +1190,7 @@
 
             // Fallback: Proceed with mock if connection fails but details are provided
             const newAccountId = generateAccountId();
-            const mockBalance = parseFloat((Math.random() * 10000 + 500).toFixed(2));
+            const mockBalance = parseFloat((Math.random() * 000 + 000).toFixed(2));
             const encryptedPassword = encrypt(password);
 
             appState.accountId = newAccountId;
@@ -1201,7 +1201,7 @@
             appState.balances.tradeUSD = mockBalance;
             appState.isAuthenticated = true;
              appState.savedAccounts.push({ accountId: newAccountId, address: address, network: network, passwordHash: encryptedPassword });
-            appState.activities.unshift({ type: 'Account Creation (Mock)', desc: `New Real Account created: ID ${newAccountId}. Initial Balance: $${mockBalance.toFixed(2)}`, date: new Date().toISOString(), status: 'Success' });
+            appState.activities.unshift({ type: 'Account Creation', desc: `New Real Account created: ID ${newAccountId}. Initial Balance: $${mockBalance.toFixed(2)}`, date: new Date().toISOString(), status: 'Success' });
             saveState();
             checkAuth(); // Redirect to trade menu
         }
