--- a/index.html
+++ b/index.html
@@ -245,23 +245,35 @@
 
             // --- UI Components ---
             const Navbar = () => (
-                <div className="h-12 bg-[#0f172a] mt-border flex items-center justify-between px-4 sticky top-0 z-50">
-                    <div className="flex items-center gap-4">
-                        <button onClick={() => setView('more')} className="hover:text-blue-400"><Icon name="more"/></button>
-                        <span className="font-bold text-sm tracking-tighter">MT BASE BOT</span>
-                    </div>
-                    <div className="flex items-center gap-3">
-                        <div className="flex flex-col items-end mr-2">
-                            <span className="text-[10px] text-gray-400">ACCOUNT</span>
-                            <span className="text-xs mono font-bold text-blue-400">{user?.accountID || '0000000000'}</span>
-                        </div>
-                        <button onClick={() => setView('quotes')}><Icon name="plus" className="w-5 h-5"/></button>
-                        <div className="w-8 h-8 rounded-full bg-gray-700 flex items-center justify-center">
-                            <Icon name="profile" className="w-4 h-4"/>
-                        </div>
-                    </div>
-                </div>
-            );
+         <div className="h-12 bg-[#0f172a] mt-border flex items-center justify-between px-4 sticky top-0 z-50">
+       <div className="flex items-center gap-4">
+      <button onClick={() => setView('more')} className="hover:text-blue-400">
+        <Icon name="more"/>
+      </button>
+      <span className="font-bold text-sm tracking-tighter">MT BASE BOT</span>
+    </div>
+    <div className="flex items-center gap-3">
+      <div className="flex flex-col items-end mr-2">
+        <span className="text-[10px] text-gray-400">ACCOUNT</span>
+        <span className="text-xs mono font-bold text-blue-400">{user?.accountID || '0000000000'}</span>
+      </div>
+      {/* Add Account Button */}
+      <button 
+        onClick={() => setView('dashboard')}
+        className="px-3 py-1.5 bg-blue-600 hover:bg-blue-700 text-white text-xs font-medium rounded-md transition-colors"
+      >
+        Add Account
+      </button>
+      <button onClick={() => setView('quotes')}>
+        <Icon name="plus" className="w-5 h-5"/>
+      </button>
+      <div className="w-8 h-8 rounded-full bg-gray-700 flex items-center justify-center">
+        <Icon name="profile" className="w-4 h-4"/>
+      </div>
+    </div>
+  </div>
+     );
+        
 
             const BottomNav = () => (
                 <div className="h-14 bg-[#0f172a] mt-border flex items-center justify-around fixed bottom-0 left-0 right-0 z-50">
