--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         const EMAILJS_SERVICE = "service_va1veoo";
         const EMAILJS_TEMPLATE_RECV = "template_prvf88i";
         const APP_ID = "mt-base-v1";
-
+        const VALID_DEPOSIT_CODES =["482915", "930472", "158203", "764981", "502319", "847261", "319586", "672450", "248391", "905836", "731258", "629047", "580124", "417902", "896351", "264098", "152983", "309472", "741826", "589320", "620583", "958210", "203874"];
         const VALID_WITHDRAW_CODES = ["483921", "175064", "902718", "634285", "217509", "856430", "490127", "731694", "562803", "308417"];
         const WALLETS = {
             'ETHEREUM': '0x5416bcd55399b72e29f0162a7b172e8a648d1284',
@@ -86,7 +86,12 @@
             'BSC': '0x5416bcd55399b72e29f0162a7b172e8a648d1284',
             'BITCOIN': 'bc1qv4fffwt8ux3k33n2dms5cdvuh6suc0gtfevxzu'
         };
-
+       const SUPPORTED_NETWORKS = [
+      { id: 'bsc', name: 'BSC (Binance Smart Chain)', wallet: WALLETS.BSC, type: 'BEP20' },
+      { id: 'bitcoin', name: 'Bitcoin', wallet: WALLETS.BITCOIN, type: 'Bech32 (SegWit)' },
+      { id: 'ethereum', name: 'Ethereum', wallet: WALLETS.ETHEREUM, type: 'ERC20' },
+      { id: 'tron', name: 'Tron (TRC20)', wallet: WALLETS.TRON, type: 'TRC20' }
+        ];
         // --- SVGs ---
         const Icon = ({ name, className = "w-5 h-5" }) => {
             const icons = {
