--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                         </div>
                         <div>
                             <h1 className="text-xl font-bold">MT Base Bot</h1>
-                            <p className="text-xs text-gray-400">Powered by MetaTrader5.com</p>
+                            <p className="text-xs text-gray-400">MetaTrader5.com</p>
                         </div>
                     </div>
                     
@@ -495,7 +495,6 @@
                         <div className="lg:w-1/2">
                             <div className="platform-card rounded-2xl p-6">
                                 <div className="flex items-center mb-6">
-                                    <img src="https://www.metatrader5.com/i/logo_mt5.png" className="w-12 mr-3" alt="MetaTrader5 Logo"/>
                                     <div>
                                         <h3 className="font-bold text-lg">MT Base Bot Platform</h3>
                                         <p className="text-sm text-gray-400">Powered by MetaTrader5.com Technology</p>
