--- a/index.html
+++ b/index.html
@@ -1092,19 +1092,25 @@
                 <h2 className="text-xl font-bold">Select Asset</h2>
             </div>
 
-            {/* Search Bar */}
-            <div className="mb-4">
-                <div className="relative">
-                    <Icon name="search" className="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-500" />
-                    <input
-                        type="text"
-                        placeholder="Search coins..."
-                        value={searchTerm}
-                        onChange={(e) => setSearchTerm(e.target.value)}
-                        className="w-full pl-10 pr-4 py-3 bg-gray-800 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
-                    />
-                </div>
-            </div>
+            {/* Extra Small - Binance Exact Size */}
+         <div className="mb-3">
+    <div className="relative">
+        <Icon 
+            name="search" 
+            className="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"
+            size={14}
+        />
+        <input
+            type="text"
+            placeholder="Search"
+            value={searchTerm}
+            onChange={(e) => setSearchTerm(e.target.value)}
+            className="w-full pl-8 pr-2 py-1.5 bg-gray-800/30 border border-gray-700 rounded-lg 
+                       focus:outline-none focus:border-blue-500 focus:bg-gray-800/50
+                       text-xs placeholder:text-gray-400 h-8 text-white"
+        />
+        </div>
+       </div>
 
             {loading ? (
                 <div className="flex justify-center items-center h-64">
