--- a/index.html
+++ b/index.html
@@ -1151,61 +1151,55 @@
         </div>
     );
 
-// Step 3: Network Selection - Binance Mobile Size
-if (step === 3) return (
-    <div className="p-4">
-        {/* Header - More Compact */}
-        <div className="flex items-center gap-2 mb-4">
-            <button 
-                onClick={() => setStep(2)}
-                className="p-1.5 hover:bg-gray-800 rounded-lg"
-            >
-                <Icon name="arrow-left" size={20} />
-            </button>
-            <h2 className="text-lg font-bold">Select Network</h2>
-        </div>
+// Step 3: Network Selection
+    if (step === 3) return (
+        <div className="p-4">
+            <div className="flex items-center gap-3 mb-6">
+                <button 
+                    onClick={() => setStep(2)}
+                    className="p-2 hover:bg-gray-800 rounded-full"
+                >
+                    <Icon name="arrow-left" />
+                </button>
+                <h2 className="text-xl font-bold">Select Network</h2>
+            </div>
 
-        {/* Coin Info - Compact */}
-        <div className="mb-3 p-3 bg-gray-800 rounded-lg">
-            <div className="flex items-center gap-2">
-                <img src={selectedCoin?.image} className="w-6 h-6" alt={selectedCoin?.name} />
-                <div>
-                    <div className="font-bold text-sm">{selectedCoin?.symbol?.toUpperCase()}</div>
-                    <div className="text-xs text-gray-400">{selectedCoin?.name}</div>
+            <div className="mb-4 p-4 bg-gray-800 rounded-lg">
+                <div className="flex items-center gap-3">
+                    <img src={selectedCoin?.image} className="w-8 h-8" alt={selectedCoin?.name} />
+                    <div>
+                        <div className="font-bold">{selectedCoin?.symbol?.toUpperCase()}</div>
+                        <div className="text-sm text-gray-400">{selectedCoin?.name}</div>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        {/* Network List - Binance Compact Size */}
-        <div className="space-y-1">
-            {SUPPORTED_NETWORKS.map(network => (
-                <div
-                    key={network.id}
-                    onClick={() => {
-                        setSelectedNetwork(network);
-                        setStep(4);
-                    }}
-                    className="p-3 flex items-center justify-between cursor-pointer hover:bg-gray-800/50 active:bg-gray-800 transition-colors rounded-lg"
-                >
-                    <div className="flex items-center gap-2">
-                        {/* Network Icon - Smaller */}
-                        <div className="w-8 h-8 bg-gray-700 rounded-full flex items-center justify-center">
-                            <Icon name="network" size={16} />
+            <div className="space-y-3">
+                {SUPPORTED_NETWORKS.map(network => (
+                    <div
+                        key={network.id}
+                        onClick={() => {
+                            setSelectedNetwork(network);
+                            setStep(4);
+                        }}
+                        className="mt-panel p-4 flex items-center justify-between cursor-pointer hover:bg-gray-800 transition-colors"
+                    >
+                        <div className="flex items-center gap-3">
+                            <div className="w-10 h-10 bg-gray-700 rounded-full flex items-center justify-center">
+                                <Icon name="network" className="text-xl" />
+                            </div>
+                            <div>
+                                <div className="font-bold">{network.name}</div>
+                                <div className="text-sm text-gray-400">{network.type}</div>
+                            </div>
                         </div>
-                        {/* Network Info - Compact */}
-                        <div className="flex-1 min-w-0">
-                            <div className="font-bold text-sm truncate">{network.name}</div>
-                            <div className="text-xs text-gray-400 truncate">{network.type}</div>
-                        </div>
+                        <Icon name="arrow-right" className="text-gray-600" />
                     </div>
-                    {/* Arrow - Smaller */}
-                    <Icon name="arrow-right" size={16} className="text-gray-500 flex-shrink-0 ml-2" />
-                </div>
-            ))}
+                ))}
+            </div>
         </div>
-    </div>
+    );
       
-);
 
     // Step 4: Address & Amount
 if (step === 4) return (
