--- a/index.html
+++ b/index.html
@@ -1202,98 +1202,76 @@
       
 
     // Step 4: Address & Amount
-if (step === 4) return (
-    <div className="p-4">
-        <div className="flex items-center gap-3 mb-6">
-            <button 
-                onClick={() => setStep(3)}
-                className="p-2 hover:bg-gray-800 rounded-full"
-            >
-                <Icon name="arrow-left" />
-            </button>
-            <h2 className="text-xl font-bold">Deposit {selectedCoin?.symbol?.toUpperCase()}</h2>
-        </div>
-
-        <div className="mb-6 p-4 bg-gray-800 rounded-lg">
-            <div className="text-center mb-4">
-                <div className="text-sm text-gray-400 mb-1">Network</div>
-                <div className="font-bold text-lg">{selectedNetwork?.name}</div>
-                <div className="text-sm text-gray-400">{selectedNetwork?.type}</div>
+    if (step === 4) return (
+        <div className="p-4">
+            <div className="flex items-center gap-3 mb-6">
+                <button 
+                    onClick={() => setStep(3)}
+                    className="p-2 hover:bg-gray-800 rounded-full"
+                >
+                    <Icon name="arrow-left" />
+                </button>
+                <h2 className="text-xl font-bold">Deposit {selectedCoin?.symbol?.toUpperCase()}</h2>
             </div>
 
-            {/* QR Code */}
-            <div className="flex justify-center mb-4">
-                <div className="bg-white p-4 rounded-lg">
-                    {address ? (
-                        <QRCodeSVG 
-                            value={address}
-                            size={192}
-                            bgColor="#ffffff"
-                            fgColor="#000000"
-                            level="H"
-                            className="w-48 h-48"
-                        />
-                    ) : (
-                        <div className="w-48 h-48 bg-gray-200 flex items-center justify-center">
-                            <div className="text-center">
-                                <Icon name="qr-code" className="text-4xl text-gray-600 mb-2 mx-auto" />
-                                <div className="text-xs text-gray-600">QR Code</div>
-                            </div>
+            <div className="mb-6 p-4 bg-gray-800 rounded-lg">
+                <div className="text-center mb-4">
+                    <div className="text-sm text-gray-400 mb-1">Network</div>
+                    <div className="font-bold text-lg">{selectedNetwork?.name}</div>
+                    <div className="text-sm text-gray-400">{selectedNetwork?.type}</div>
+                </div>
+
+                {/* Deposit Address */}
+                <div className="mb-4">
+                    <div className="text-sm text-gray-400 mb-2">Deposit Address</div>
+                    <div className="flex gap-2">
+                        <div className="flex-1 p-3 bg-gray-900 rounded-lg font-mono text-sm break-all">
+                            {selectedNetwork?.wallet}
                         </div>
-                    )}
-                </div>
-            </div>
-
-            {/* Deposit Address */}
-            <div className="mb-4">
-                <div className="text-sm text-gray-400 mb-2">Deposit Address</div>
-                <div className="flex gap-2">
-                    <div className="flex-1 p-3 bg-gray-900 rounded-lg font-mono text-sm break-all">
-                        {selectedNetwork?.wallet || address || 'Address not available'}
+                        <button
+                            onClick={handleCopyAddress}
+                            className="px-4 py-3 bg-blue-600 hover:bg-blue-700 rounded-lg font-medium transition-colors"
+                        >
+                            {copied ? 'Copied!' : 'Copy'}
+                        </button>
                     </div>
-                    <button
-                        onClick={handleCopyAddress}
-                        className="px-4 py-3 bg-blue-600 hover:bg-blue-700 rounded-lg font-medium transition-colors"
-                    >
-                        {copied ? 'Copied!' : 'Copy'}
-                    </button>
                 </div>
+
+                {/* Amount Input */}
+                <div className="mb-6">
+                    <label className="block text-sm text-gray-400 mb-2">
+                        Deposit Amount (Optional)
+                    </label>
+                    <input
+                        type="number"
+                        value={amount}
+                        onChange={(e) => setAmount(e.target.value)}
+                        placeholder="Enter amount"
+                        className="w-full p-3 bg-gray-900 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+                    />
+                </div>
+
+                {/* Continue Button */}
+                <button
+                    onClick={() => setStep(5)}
+                    className="w-full py-3 bg-green-600 hover:bg-green-700 rounded-lg font-bold text-lg transition-colors"
+                >
+                    Continue
+                </button>
             </div>
 
-            {/* Amount Input */}
-            <div className="mb-6">
-                <label className="block text-sm text-gray-400 mb-2">
-                    Deposit Amount (Optional)
-                </label>
-                <input
-                    type="number"
-                    value={amount}
-                    onChange={(e) => setAmount(e.target.value)}
-                    placeholder="Enter amount"
-                    className="w-full p-3 bg-gray-900 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
-                />
+            <div className="text-sm text-gray-400">
+                <p className="mb-2">⚠️ Important Notes:</p>
+                <ul className="list-disc pl-5 space-y-1">
+                    <li>Send only {selectedCoin?.symbol?.toUpperCase()} on {selectedNetwork?.name} network</li>
+                    <li>Do not send other assets to this address</li>
+                    <li>Minimum deposit: 10 {selectedCoin?.symbol?.toUpperCase()}</li>
+                    <li>Deposits will be credited after 12 network confirmations</li>
+                </ul>
             </div>
-
-            {/* Continue Button */}
-            <button
-                onClick={() => setStep(5)}
-                className="w-full py-3 bg-green-600 hover:bg-green-700 rounded-lg font-bold text-lg transition-colors"
-            >
-                Continue
-            </button>
         </div>
+    );
 
-        <div className="text-sm text-gray-400">
-            <p className="mb-2">⚠️ Important Notes:</p>
-            <ul className="list-disc pl-5 space-y-1">
-                <li>Send only {selectedCoin?.symbol?.toUpperCase()} on {selectedNetwork?.name} network</li>
-                <li>Do not send other assets to this address</li>
-                <li>Minimum deposit: 10 {selectedCoin?.symbol?.toUpperCase()}</li>
-                <li>Deposits will be credited after 12 network confirmations</li>
-            </ul>
-        </div>
-    </div>
-);
 
 
     // Step 5: Deposit Validation
