--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@
             const Dashboard = () => {
                 const [quickActions, setQuickActions] = useState([
                     { icon: 'deposit', label: 'Deposit', action: () => setView('deposit') },
-                    { icon: 'withdraw', label: 'Withdraw', action: () => setView({'Withdrawal') },
+                    { icon: 'withdraw', label: 'Withdraw', action: () => setView('Withdrawal') },
                     { icon: 'trade', label: 'New Order', action: () => setView('trade') },
                     { icon: 'charts', label: 'Analysis', action: () => setView('charts') }
                 ]);
